# logging-forensic

./: README.md  pyproject.toml  setup.py
logging-forensic/: __init__.py  core.py
logging_forensic/: core.py
